# starbots

./: .bashrc  .gitattributes  README.md  jenkins__pid__url.txt
.rviz/: default.rviz  persistent_settings
cup_detection_training/: cup_detector_train.py
ros2_ws/src/: arm_real.launch.py  arm_sim.launch.py  hole_pickup.launch.py  test_rviz.rviz
ros2_ws/src/arm_real/: .setup_assistant  CMakeLists.txt  package.xml
ros2_ws/src/arm_sim/: .setup_assistant  CMakeLists.txt  package.xml
ros2_ws/src/cone_detection/: CMakeLists.txt  package.xml
ros2_ws/src/cone_detection/src/cone_detection/: cone_detection_node.py  cone_detection_node_real.py  cone_test.py  cup_download.py  nn_test.py  raw_broadcaster.py
ros2_ws/src/universal_robot_ros2/barista_ros2/barista_dock_charger_station/: CMakeLists.txt  package.xml
ros2_ws/src/universal_robot_ros2/barista_ros2/barista_dock_charger_station/launch/: barista_1_charge_server.launch.xml  barista_1_charge_server_v3.launch.xml  barista_1_start_dock_charger_station_server.launch.xml  barista_2_charge_server.launch.xml  barista_2_charge_server_v3.launch.xml  barista_2_start_dock_charger_station_server.launch.xml  barista_charge_server.launch.xml  barista_three_start_dock_charger_station_server.launch.xml  cleaner_1_start_dock_charger_station_server.launch.xml  launch_one_turtleE_charge_servers.launch.xml  launch_two_barista_charge_servers.launch.xml  start_dock_charger_station_server.launch.xml  start_fleet_robots_are_docked.launch.xml  start_two_teleport_charge_servers.launch.xml
ros2_ws/src/universal_robot_ros2/barista_ros2/barista_dock_charger_station/msg/: FleetDockStatus.msg
ros2_ws/src/universal_robot_ros2/barista_ros2/barista_dock_charger_station/scripts/: barista_dock_node.py  barista_dock_node_v2.py  barista_dock_node_v3.py  scan_orientation.py  start_dock_charger_station_server.py  start_fleet_robots_are_docked.py
ros2_ws/src/universal_robot_ros2/barista_ros2/barista_dock_charger_station/srv/: DockChargerStation.srv
ros2_ws/src/zenoh-pointcloud/: README.md  install_zenoh.sh  (+1 more)
webpage_ws/: start_jenkins.sh
webpage_ws/jenkins/: config.xml  identity.key.enc  jenkins.model.JenkinsLocationConfiguration.xml  jenkins.telemetry.Correlator.xml  org.jenkinsci.plugins.gitclient.GitHostKeyVerificationConfiguration.xml  secret.key
webpage_ws/starbots/: index.html  main.js
(+503 files in other folders)
